<resources>
    <string name="app_name">IntentsProj</string>
    <string name="num1">num1</string>
    <string name="num2">num2</string>
    <string name="number1">Number1</string>
    <string name="number2">number2</string>
    <string name="btnpluse">+</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="devide">/</string>
    <string name="Multiply1">*</string>
</resources>